--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
     <div class="container">
       <div id="quote-box" class="quote-box">
-        <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
-        <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+        <img src="img/Coco-Chanel.png" class="icon">
+        <p class="quote">The most courageous act is still to think for yourself. Aloud.</p>
+        <p class="source">Coco Chanel</p>
       </div>
     </div>
     
